--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo/hamrorooms.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="room rental, accommodation, find room, Hamro Rooms, room in kathmandu" />
+    <meta name="keywords" content="room rental, hamro rental, rooms, accommodation, find room, Hamro Rooms, room in kathmandu" />
     <meta name="description" content="Find the perfect room for rent on Hamro Rooms. Explore a variety of rental options for tenants and landlords." />
     <meta name="author" content="Hamro Rooms" />
     <title>Hamro Rooms</title>
