--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo/hamrorooms.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo/h.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="room rental, roomfinder, room rent, room near me, hamro rental, rooms, accommodation, find room, Hamro Rooms, room in kathmandu" />
     <meta name="description" content="Find the perfect room for rent on Hamro Rooms. Explore a variety of rental options for tenants and landlords." />
