add google analytics code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-70F2WSTNQ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-70F2WSTNQ8');
+</script>
+
     <link rel="icon" type="image/svg+xml" href="/logo/h.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="room rental, roomfinder, room rent, room near me, hamro rental, rooms, accommodation, find room, Hamro Rooms, room in kathmandu" />
